# vue-element-admin-fastapi

./: .env  .gitignore  LICENSE  README.md
backend/: .env  (+1 more)
backend/app/: .gitignore  README  main-start.sh  prestart.sh  pyproject.toml  requirements.txt  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 059ad12c7f53_.py  0997c9d69092_.py  0a7161354dc8_.py  0ae47e8cc0e0_.py  0dac68944a5c_.py  0df662cd69b7_.py  13d7922ac871_.py  142f79231dca_first_commit.py  165195e42349_.py  250e78708916_.py  273784418566_.py  2969d7cfddc2_.py  29c86643dd99_.py  2b0a203b1216_.py  2bff36d80223_.py  30efe8b986a6_.py  3161ae076013_.py  316f08c19996_.py  386e932f9252_.py  394872808125_.py  39e963f2a90c_.py  3d10da763575_.py  4162998bb277_.py  42987bba616e_.py  4ca67a0be2c7_.py  4f9c650647ae_.py  51c875b43e0e_.py  520bc0b474b2_intial.py  57e0de6dd2d7_.py  5c7f63f57fc0_.py  5f08629e13f1_.py  6052d96d32f0_.py  6d2f0aac7bb2_.py  766f4180ceb7_.py  76e4ee829206_.py  78c845ca633e_.py  7936332cb619_.py  7af5539ce942_.py  7d8b02600f1c_.py  88843daa0733_.py  (+27 more)
backend/app/app/: initial_data.py  main.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/celery_app/: celery_app.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/crud/: __init__.py  crud_menu.py  crud_user.py
backend/app/app/db/: base_class.py  export_data.py  init_db.py
backend/app/app/db_pre_start/: backend_pre_start.py
backend/app/app/extensions/: exception.py  logger.py  request_id.py  routing.py  utils.py
backend/app/scripts/: group_generate.py  menu_generate.py
(+116 files in other folders)
